--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
     </head>
 
 <body>
-    <div class="container">
     <header>
         <h1>Password Generator</h1>
     </header>
+    <div class="wrapper">
     <div class="box">
     <div class ="box-header">
-            <h2>Generate a Password</h2>      
+        <h2>Generate a Password</h2>      
     </div>
     <div class="box-body">
         <textarea readonly id="password" placeholder="Your Secure Password"></textarea>
